# parFE

./: ChangeLog  LICENCE  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
config/: acinclude.m4  mkinstalldirs
doc/: Doxyfile  How_to_patch_trilinos  index.doc  invoke-configure-arch-linux.sh  invoke-configure-mac.sh  invoke-configure-xt3.sh  invoke-configure-xt5.sh  trilinos-10.2.2.patch  trilinos-10.6.4-configure.sh
example/: Makefile.am  Makefile.in  analyze_all.cpp  converter.cpp  new_pfaim.cpp  pfaim.cpp
mesh/: simple_test.mesh
src/: BoundaryCondition.cpp  BoundaryCondition.h  DistMesh.cpp  DistMesh.h  EbeElasticityProblem.cpp  EbeElasticityProblem.h  ElasticityProblem.cpp  ElasticityProblem.h  ElementByElementMatrix.cpp  ElementByElementMatrix.h  ElementIntegrator.cpp  ElementIntegrator.h  FEParameterList.hpp  GReader.cpp  GReader.hpp  GWriter.cpp  GWriter.hpp  IBT_DispWriter.hpp  IBT_ProblemReader.hpp  IBT_ProblemWriter.hpp  IBT_SolutionWriter.hpp  IntMap.cpp  IntMap.h  Jacobi.cpp  Jacobi.h  MATLAB_MatrixWriter.hpp  MATLAB_VectorWriter.hpp  MEDIT_DispWriter.hpp  MEDIT_MeshWriter.hpp  Makefile.am  Makefile.in  MatrixWriter.h  MeshWriter.h  PMVIS_MeshWriter.hpp  ProblemReader.h  ProblemWriter.h  SolutionWriter.h  Tools.cpp  Tools.h  VbrElasticityProblem.cpp  (+6 more)
test/: Makefile.am  Makefile.in  test_preconditioner.cpp
tools/fileformat/: README  convert_file.sh  convert_to_newformat.py
tools/visualization/: README  createxmf.py  createxmfold.py
